Fix text alignment on Analyze in Terra export button description. #2502.

--- a/spa/src/app/shared/download-button/download-button.component.scss
+++ b/spa/src/app/shared/download-button/download-button.component.scss
@@ -6,7 +6,7 @@
  */
 
 :host {
-    display: inline-block;
+    display: block;
 }
 
 .icon-download:not(.icon-download-disabled) {
